@@ -135,7 +135,7 @@ class snippetpresets extends \admin_setting {
         }//end of parse preset template
 
 
-        public static function fetch_presets(){
+        public static function fetch_presets($themeonly=false){
             global $CFG,$PAGE;
 			//init return array
             $ret = array();
@@ -144,7 +144,7 @@ class snippetpresets extends \admin_setting {
             //we search the snippets "presets" and the themes "snippet" folders for presets
             $snippet_presets_dir=$CFG->dirroot . '/lib/editor/atto/plugins/snippet/presets';
             $theme_snippets_dir=$PAGE->theme->dir . '/snippet';
-            if(file_exists($snippet_presets_dir)) {
+            if(!$themeonly && file_exists($snippet_presets_dir)) {
                 $dirs[] = new \DirectoryIterator($snippet_presets_dir);
             }
             if(file_exists($theme_snippets_dir)) {
